# Shiori

./: .SRCINFO  .SRCINFO.src  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  FINAL_COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  LICENSE  PKGBUILD  PKGBUILD.src  PROJECT_SUMMARY.md  README.md  README_CONTINUATION.md  RELEASE_NOTES_v0.1.9.md  RELEASE_SETUP.md  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  architecture.md  check_user.js  commit_script.sh  desgin.md  eslint.config.js  eslint_unused.json  fix-steps.js  fix_finish.js  fix_import.js  fix_import_header.js  fix_theme.js  fix_torbox.js  fix_welcome.js  index.html  jobs.json  mf_filter.html  package-lock.json  package.json  parsed_eslint_unused.json  (+27 more)
src-tauri/: Cargo.toml  build.rs  clean.py  debug.keystore  tauri.conf.json  test.xml  test_conv.rs  test_epub.rs  test_response.rs
src-tauri/capabilities/: android.json  default.json  shell-open.json
src-tauri/icons/: icon.icns
src-tauri/plugins/espeak-rs-sys/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs
src-tauri/plugins/tauri-plugin-android-auth/: Cargo.toml  README.md  build.rs  package.json
src-tauri/plugins/tauri-plugin-android-auth/android/: build.gradle.kts  consumer-rules.pro
src-tauri/plugins/tauri-plugin-android-auth/examples/tauri-app/: package.json
src-tauri/plugins/tauri-plugin-android-auth/examples/tauri-app/src/: App.svelte
src-tauri/plugins/tauri-plugin-android-auth/examples/tauri-app/src-tauri/: Cargo.toml
src-tauri/plugins/tauri-plugin-android-auth/guest-js/: index.ts
src-tauri/plugins/tauri-plugin-android-auth/permissions/: default.toml
src-tauri/plugins/tauri-plugin-android-auth/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-android-auth/permissions/autogenerated/commands/: clear_secure_token.toml  get_pending_oauth_data.toml  (+3 more)
src-tauri/plugins/tauri-plugin-android-auth/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-android-auth/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/plugins/tauri-plugin-android-saf/: Cargo.toml  README.md  build.rs  package.json
src-tauri/plugins/tauri-plugin-android-saf/android/: build.gradle.kts  consumer-rules.pro
src-tauri/plugins/tauri-plugin-android-saf/examples/tauri-app/: package.json
src-tauri/plugins/tauri-plugin-android-saf/guest-js/: index.ts
src-tauri/plugins/tauri-plugin-android-saf/permissions/: default.toml
src-tauri/plugins/tauri-plugin-android-saf/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-android-saf/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-android-saf/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/resources/espeak-ng-data/: th_dict
src-tauri/scripts/: cf_daemon.mjs  cf_solver.mjs
src-tauri/src/: error.rs  espeak_stubs.rs  lib.rs  main.rs  models.rs  test_epub.rs  torbox.rs
src-tauri/src/cloudflare/: browser.rs  client.rs  commands.rs  daemon.rs  detector.rs  mod.rs  session.rs
src-tauri/src/commands/: anilist.rs  backup.rs  collections.rs  conversion.rs  cover.rs  debrid.rs  discord.rs  discovery.rs  doodle.rs  export.rs  folder_watch.rs  library.rs  manga.rs  metadata.rs  migration.rs  mod.rs  preferences.rs  prowlarr.rs  reader.rs  rendering.rs  rss.rs  search.rs  share.rs  sources.rs  sources.rs.orig  sync.rs  tags.rs  torbox.rs  translation.rs  window.rs
src-tauri/src/conversion/: docx.rs  epub_builder.rs  epub_writer.rs  error.rs  fb2.rs  mobi.rs  mod.rs  oeb.rs  pdf.rs  txt.rs  utils.rs
src-tauri/src/conversion/formats/: cbr.rs  cbz.rs  docx.rs  fb2.rs  mobi.rs  mod.rs  pdf.rs  txt.rs
src-tauri/src/conversion/tests/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/services/: backup_service.rs  book_metadata_service.rs  cache.rs  calibre_service.rs  collection_service.rs  conversion_engine.rs  cover_service.rs  debrid.rs  discord_service.rs  discovery_service.rs  docx_adapter.rs  epub_adapter.rs  epub_builder.rs  export_service.rs  fb2_reader_adapter.rs  folder_watch.rs  format_adapter.rs  format_detection.rs  format_detector.rs  html_reader_adapter.rs  library_service.rs  manga_metadata_service.rs  manga_service.rs  markdown_reader_adapter.rs  metadata_service.rs  mobi_adapter.rs  mod.rs  pdf_adapter.rs  piper_service.rs  reader_service.rs  renderer.rs  rendering_service.rs  rss_scheduler.rs  rss_service.rs  search_service.rs  share_service.rs  sync_service.rs  tag_service.rs  torbox.rs  translation_service.rs  (+1 more)
src-tauri/src/services/adapters/: cbr.rs  cbz.rs  docx.rs  epub.rs  fb2.rs  html.rs  mobi.rs  mod.rs  pdf.rs  txt.rs
src-tauri/src/services/online/: anilist.rs  mod.rs  openlibrary.rs  provider.rs  worker.rs
src-tauri/src/sources/: animetosho.rs  annas_archive.rs  bitsearch.rs  libgen.rs  mangadex.rs  mangafire.rs  mangakakalot.rs  mangasee123.rs  manhwahub.rs  manhwaread.rs  mod.rs  network.rs  nyaa.rs  registry.rs  rutracker.rs  tcbscans.rs  toongod.rs  toonily.rs  toontop.rs  torrent_csv.rs  tpb_api.rs  weebrook.rs  x1337.rs
src-tauri/src/utils/: file.rs  validate.rs
src-tauri/tests/: integration_library.rs  integration_mangadex.rs  integration_tests.rs  test_live.rs  test_parse_rel.rs
(+916 files in other folders)
