[package]
name = "shiori"
version = "0.1.0"
description = "Modern offline-first eBook library manager"
authors = []
license = "MIT"
repository = ""
default-run = "shiori"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core framework
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"

# Database & storage
rusqlite = { version = "0.32", features = ["bundled", "blob", "serde_json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Existing format support (EPUB, PDF, ZIP)
epub = "2.1"
lopdf = "0.33"
zip = "2.1"
walkdir = "2.5"

# Additional format parsing
mobi = "0.6"                    # MOBI/AZW3 support
docx-rs = "0.4"                 # DOCX parsing
quick-xml = "0.36"              # FB2/XML parsing
html5ever = "0.27"              # HTML parsing
markup5ever_rcdom = "0.3"       # HTML DOM
unrar = { version = "0.5", optional = true }  # CBR support (requires libunrar)

# RSS feed system
feed-rs = "1.3"                 # RSS/Atom parsing
ammonia = "4.0"                 # HTML sanitization
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }  # HTTP client (using rustls instead of native-tls)

# Image processing & cover generation
image = "0.25"
imageproc = "0.24"              # Image manipulation
resvg = "0.42"                  # SVG rendering
tiny-skia = "0.11"              # 2D graphics
ab_glyph = "0.2"                # Font rendering (compatible with imageproc)

# PDF generation for conversions
printpdf = "0.7"                # PDF creation

# Book sharing system
axum = "0.7"                    # HTTP server
tower = "0.4"                   # Middleware
tower-http = { version = "0.5", features = ["fs", "trace"] }
qrcode = "0.14"                 # QR code generation
argon2 = "0.5"                  # Password hashing
rand = "0.8"                    # Random token generation

# Task scheduling
tokio-cron-scheduler = "0.10"   # Cron job scheduler

# Caching & serialization
lru = "0.12"
bincode = "1.3"                 # Binary serialization
zstd = "0.13"                   # Compression for cache

# Concurrency & utilities
dashmap = "6.0"                 # Concurrent HashMap
rayon = "1.10"                  # Parallel iterators for CPU-bound work
async-trait = "0.1"             # Async trait support

# Error handling & logging
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Other utilities
csv = "1.3"
regex = "1.10"                  # Regular expressions
strsim = "0.11"                 # String similarity for duplicate detection
parking_lot = "0.12"            # Faster mutexes
lazy_static = "1.5"             # Static initialization

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
